--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ultimate Tic-Tac-Toe</title>
+    <title>Disappearing Tic-Tac-Toe</title>
     <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
   </head>
   <body>
